2006-04-24  Paul Eggert  <eggert@cs.ucla.edu>

	* fsusage.m4 (gl_FILE_SYSTEM_USAGE): Use return, not exit.
	Don't assume that exit status -1 is valid.
	* nanosleep.m4 (gl_FUNC_NANOSLEEP): Likewise.
	* putenv.m4 (gl_FUNC_PUTENV): Likewise.
	* rmdir-errno.m4 (gl_FUNC_RMDIR_NOTEMPTY): Likewise.
	* readdir.m4 (GL_FUNC_READDIR): Include <stdlib.h>.
	* rename.m4 (vb_FUNC_RENAME): Likewise.
	* unlink-busy.m4 (gl_FUNC_UNLINK_BUSY_TEXT): Use AC_RUN_IFELSE,
	not AC_TRY_RUN.  Use return, not exit.  Don't assume that
	functions can be used without declaring them, or that you can
	exit with status -1.
	* utimes-null.m4 (gl_FUNC_UTIMES_NULL): Likewise.

2006-04-17  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.m4 (gl_FILEMODE): Check for strmode declaration.

2006-04-12  Paul Eggert  <eggert@cs.ucla.edu>

	* jm-macros.m4 (gl_MACROS): Check for setgroups and sync, since they
	are not in Interix.

2006-04-11  Paul Eggert  <eggert@cs.ucla.edu>

	* time_r.m4 (gl_TIME_R): Add AC_LIBSOURCES for time_r.c and time_r.h.

2006-04-09  Paul Eggert  <eggert@cs.ucla.edu>

	* regex.m4 (gl_REGEX): Check for new glibc interface to
	translation table.

2006-03-11  Eric Blake  <ebb9@byu.net>

	* double-slash-root.m4: New file, provides gl_DOUBLE_SLASH_ROOT.
	* dirname.m4 (gl_DIRNAME): Use gl_DOUBLE_SLASH_ROOT.
	* dos.m4 (FILE_SYSTEM_PREFIX_LEN): Move from here to dirname.h.
	(FILE_SYSTEM_DRIVE_PREFIX_CAN_BE_RELATIVE): New define.

2006-03-25  Paul Eggert  <eggert@cs.ucla.edu>

	* regex.m4 (gl_REGEX): Don't insist on REG_SYNTAX_POSIX_EGREP,
	REG_SYNTAX_EMACS, and REG_IGNORE_CASE.  Settle for the traditional
	glibc names.  Even if glibc is changed to conform to POSIX, the
	traditional names will be available anyway, since regex depends on
	the extensions module.  Also, fix a longstanding typo in the
	implementation of Spencer ERE test #75 from grep 2.3.  Problems
	reported by Emanuele Giaquinta.  Also, change sense of cached
	variable, so that the message makes sense.
